fixed the way that css files are loaded. added future support for "past officers" section

--- a/ACM_General/core/templates/core/base.html
+++ b/ACM_General/core/templates/core/base.html
@@ -31,11 +31,14 @@
             {% endblock %}
 
             {% block head_author %}
-                <meta name="author" content="ACM-MST sig.com" />
+                <meta name="author" content="ACM-MST SIG.com" />
             {% endblock %}
 
             {% block head_robots %}
                 <meta name="robots" content="NONE,NOARCHIVE" />
+            {% endblock %}
+
+            {% block head_base_stylesheets %}
             {% endblock %}
 
             {% block head_stylesheets %}
@@ -51,7 +54,7 @@
             {% endblock %}
 
             {% block head_title %} 
-                <title> ACM-General </title> 
+                <title> ACM | General </title>
             {% endblock %}
         {% endblock %}
 
