--- a/ACM_General/home/templates/home/base.html
+++ b/ACM_General/home/templates/home/base.html
@@ -8,7 +8,7 @@
     <title> ACM | General </title>
 {% endblock %}
 
-{% block head_stylesheets %}
+{% block head_base_stylesheets %}
      <link rel="stylesheet" href="{% static "/home/css/normalize.css" %}" />
      <link rel="stylesheet" href="{% static "/home/css/main.css" %}" />
 {% endblock %}
