--- a/ACM_General/home/static/home/css/index.css
+++ b/ACM_General/home/static/home/css/index.css
@@ -27,16 +27,17 @@
     height: 100%;
     margin-right: 40px;
     display: flex;
+    min-width: 275px;
 }
 .event-wrapper:nth-child(even) .event-card .flyer-space {
     margin-right: 0;
     margin-left: 40px;
 }
-.event-card:nth-child(even) .flyer-info p {
+.event-wrapper:nth-child(even) .flyer-info p {
     padding-right: 0;
     padding-left: 10px;
 }
-.event-card:nth-child(even) .flyer-info a {
+.event-wrapper:nth-child(even) .flyer-info a {
     margin-left: 10px;
 }
 .flyer-space img {
@@ -60,7 +61,6 @@
     color: rgba(0,0,0,.54);
     font-size: 15px;
     margin-bottom: 40px;
-    padding-right: 10px;
 }
 .flyer-info a {
     font-size: 14px;
