[UPDATE] Changed homepage events, updated media page

--- a/ACM_General/home/templates/home/base.html
+++ b/ACM_General/home/templates/home/base.html
@@ -78,7 +78,7 @@
                     <div class="welcome-section">
                         <h2>Welcome.</h2>
                     <br>
-                        <h1>We are Under Construction.</h1>
+                        <h1>We are Missouri S&T - ACM.</h1>
                         <!-- <a href="#">Read About Us</a> -->
                     </div>
                 </div>
