--- a/ACM_General/home/templates/home/officers.html
+++ b/ACM_General/home/templates/home/officers.html
@@ -18,9 +18,9 @@
 	<div class="main-section">
 		<div class="content-wrapper">
 			<ul class="cards">
-        <li class="cards__item">
+            <!--<li class="cards__item">
             <div class="card">
-{#                <div class="card__image" style="background-image: url({% static "home/img/sponsors/garmin-squarelogo.png" %})"></div>#}
+                <div class="card__image" style="background-image: url({% static "home/img/sponsors/garmin-squarelogo.png" %})"></div>
                 <div class="card__content">
                     <div class="card__title">Sammie Bush | President, CCDC Captain</div>
                     <p class="card__text">Year - Senior<br>Length of Service - 6 Months<br>SIG - ACM General, SIG-Security</p>
@@ -31,8 +31,8 @@
                     </div>
                 </div>
             </div>
-        </li>
-        <li class="cards__item">
+        </li> -->
+        <!-- <li class="cards__item">
             <div class="card">
 {#                <div class="card__image" style="background-image: url({% static "home/img/sponsors/garmin-squarelogo.png" %})"></div>#}
                 <div class="card__content">
@@ -45,38 +45,38 @@
                     </div>
                 </div>
             </div>
-        </li>
+        </li> -->
         <li class="cards__item">
             <div class="card">
-{#                <div class="card__image" style="background-image: url({% static "home/img/sponsors/garmin-squarelogo.png" %})"></div>#}
+                <div class="card__image" style="background-image: url({% static "home/img/officers/current/secretary.jpg" %})"></div>
                 <div class="card__content">
                     <div class="card__title">Dalton Cole | Secretary, SIG-Comp Chair</div>
-                    <p class="card__text">Year - PhD<br>Length of Service - 2 Years<br>SIG - ACM General, SIG-Comp</p>
+                    <p class="card__text">Year - PhD<br>Length of Service - 3 Years<br>SIG - ACM General, SIG-Comp</p>
                     <div class="link_zone">
-                        <a href="https://acm.mst.edu/404" class="btn btn--block card__btn">GitHub</a>
-                        <a href="https://acm.mst.edu/404" class="btn btn--block card__btn">LinkedIn</a>
-                        <a href="https://acm.mst.edu/404" class="btn btn--block card__btn">Email</a>
+                        <a href="https://github.com/drc14" class="btn btn--block card__btn">GitHub</a>
+                        <a href="https://www.linkedin.com/in/daltoncole1/" class="btn btn--block card__btn">LinkedIn</a>
+                        <a href="mailto:drcgy5@mst.edu" class="btn btn--block card__btn">Email</a>
                     </div>
                 </div>
             </div>
         </li>
         <li class="cards__item">
             <div class="card">
-{#                <div class="card__image" style="background-image: url({% static "home/img/sponsors/garmin-squarelogo.png" %})"></div>#}
+                <div class="card__image" style="background-image: url({% static "home/img/officers/current/treasurer.jpg" %})"></div>
                 <div class="card__content">
                     <div class="card__title">Henry Wong | Treasurer</div>
                     <p class="card__text">Year - Freshman<br>Length of Service - 3 Months<br>SIG - ACM General, SIG-Game</p>
                     <div class="link_zone">
-                        <a href="https://acm.mst.edu/404" class="btn btn--block card__btn">GitHub</a>
-                        <a href="https://acm.mst.edu/404" class="btn btn--block card__btn">LinkedIn</a>
-                        <a href="https://acm.mst.edu/404" class="btn btn--block card__btn">Email</a>
+                        <a href="https://github.com/henrycwong" class="btn btn--block card__btn">GitHub</a>
+                        <a href="https://linkedin/in/henrycwong" class="btn btn--block card__btn">LinkedIn</a>
+                        <a href="mailto:hcwqk7@mst.edu" class="btn btn--block card__btn">Email</a>
                     </div>
                 </div>
             </div>
         </li>
-        <li class="cards__item">
+        <!--<li class="cards__item">
             <div class="card">
-{#                <div class="card__image" style="background-image: url({% static "home/img/sponsors/garmin-squarelogo.png" %})"></div>#}
+                <div class="card__image" style="background-image: url({% static "home/img/sponsors/garmin-squarelogo.png" %})"></div>
                 <div class="card__content">
                     <div class="card__title">Erik Michalak | SIG-Security Chair</div>
                     <p class="card__text">Year - Senior<br>Length of Service - 6 Months<br>SIG - SIG-Security</p>
@@ -87,24 +87,24 @@
                     </div>
                 </div>
             </div>
-        </li>
+        </li>-->
         <li class="cards__item">
             <div class="card">
-{#                <div class="card__image" style="background-image: url({% static "home/img/sponsors/garmin-squarelogo.png" %})"></div>#}
+                <div class="card__image" style="background-image: url({% static "home/img/officers/current/SIG.com-chair.jpg" %})"></div>
                 <div class="card__content">
                     <div class="card__title">Kevin Schoonover | SIG.com Chair, System Administrator</div>
                     <p class="card__text">Year - Freshman<br>Length of Service - 6 Months<br>SIG - SIG.com ACM-General</p>
                     <div class="link_zone">
-                        <a href="https://acm.mst.edu/404" class="btn btn--block card__btn">GitHub</a>
-                        <a href="https://acm.mst.edu/404" class="btn btn--block card__btn">LinkedIn</a>
-                        <a href="https://acm.mst.edu/404" class="btn btn--block card__btn">Email</a>
+                        <a href="https://github.com/kevinschoonover" class="btn btn--block card__btn">GitHub</a>
+                        <a href="https://www.linkedin.com/in/schoonoverkevin/" class="btn btn--block card__btn">LinkedIn</a>
+                        <a href="mailto:ksyh3@mst.edu" class="btn btn--block card__btn">Email</a>
                     </div>
                 </div>
             </div>
         </li>
-        <li class="cards__item">
+        <!--<li class="cards__item">
             <div class="card">
-{#                <div class="card__image" style="background-image: url({% static "home/img/sponsors/garmin-squarelogo.png" %})"></div>#}
+                <div class="card__image" style="background-image: url({% static "home/img/sponsors/garmin-squarelogo.png" %})"></div>#}
                 <div class="card__content">
                     <div class="card__title">Joseph Kuhn | SIG-Game Chair</div>
                     <p class="card__text">Year - Freshman<br>Length of Service - 3 Months<br>SIG - SIG Game</p>
@@ -115,10 +115,10 @@
                     </div>
                 </div>
             </div>
-        </li>
-        <li class="cards__item">
+        </li>-->
+        <!--<li class="cards__item">
             <div class="card">
-{#                <div class="card__image" style="background-image: url({% static "home/img/sponsors/garmin-squarelogo.png" %})"></div>#}
+                <div class="card__image" style="background-image: url({% static "home/img/sponsors/garmin-squarelogo.png" %})"></div>#}
                 <div class="card__content">
                     <div class="card__title">Cody Roberts | SIG-Lounge Chair</div>
                     <p class="card__text">Year - Freshman<br>Length of Service - 3 Months<br>SIG - SIG-Lounge</p>
@@ -130,7 +130,7 @@
                 </div>
             </div>
         </li>
-    </ul>
+    </ul>-->
 		</div>
 	</div>
 {% endblock %}
