fully changed the media page to use a javascript library to sort the images. It would be ideal to write our own at some point. Make a note.

--- a/ACM_General/home/static/home/css/officers.css
+++ b/ACM_General/home/static/home/css/officers.css
@@ -99,7 +99,8 @@
     overflow: hidden;
     position: relative;
     transition: filter 0.5s cubic-bezier(.43,.41,.22,.91);
-    width: 40%;
+    max-width: 155px;
+    min-width: 155px;
     height: 100%;
 }
 
