--- a/ACM_General/core/templates/core/base.html
+++ b/ACM_General/core/templates/core/base.html
@@ -16,6 +16,9 @@
                 <link rel="manifest" href="{% static "/home/img/manifest.json" %}">
                 <link rel="mask-icon" href="{% static "/home/img/safari-pinned-tab.svg" %}" color="#5bbad5">
                 <meta name="theme-color" content="#ffffff">
+				<!--[if lt IE 9]>
+				<script src="lib/js/html5shiv.js"></script>
+				<![endif]-->
             {% endblock %}
 
             {% block head_charset %}
