--- a/ACM_General/home/templates/home/media.html
+++ b/ACM_General/home/templates/home/media.html
@@ -7,39 +7,64 @@
 {% endblock %}
 
 {% block head_stylesheets %}
-<link rel="stylesheet" href="{% static "/home/css/normalize.css" %}" />
-<link rel="stylesheet" href="{% static "/home/css/main.css" %}" />
 <link rel="stylesheet" href="{% static "/home/css/media.css" %}" />
 {% endblock %}
 
-
-
 {% block body_content %}
-<div class="media-container">
-    <a href="{% static "/home/img/media/ctf.jpg" %}">
-        <img class="media-picture" src="{% static "/home/img/media/ctf.jpg" %}" />
-    </a>
-    <a href="{% static "/home/img/media/ctf_1.jpg" %}">
-        <img class="media-picture" src="{% static "/home/img/media/ctf_1.jpg" %}" />
-    </a>
-    <a href="{% static "/home/img/media/sigsec.jpg" %}">
-        <img class="media-picture" src="{% static "/home/img/media/sigsec.jpg" %}" />
-    </a>
-    <a href="{% static "/home/img/media/sigcomp.jpg" %}">
-        <img class="media-picture" src="{% static "/home/img/media/sigcomp.jpg" %}" />
-    </a>
-    <a href="{% static "/home/img/media/intropython.jpg" %}">
-        <img class="media-picture" src="{% static "/home/img/media/intropython.jpg" %}" />
-    </a>
-    <a href="{% static "/home/img/media/network_talk.jpg" %}">
-        <img class="media-picture" src="{% static "/home/img/media/network_talk.jpg" %}" />
-    </a>
-    <a href="{% static "/home/img/media/sigcomp_1.jpg" %}">
-        <img class="media-picture" src="{% static "/home/img/media/sigcomp_1.jpg" %}" />
-    </a>
-    <a href="{% static "/home/img/media/megaminer.jpg" %}">
-        <img class="media-picture" src="{% static "/home/img/media/megaminer.jpg" %}" />
-    </a>
+<div class="main-section">
+    <div class="content-wrapper">
+        <div class="m-p-g">
+            <div class="m-p-g__thumbs" data-google-image-layout data-max-height="350">
+                <img src="{% static "/home/img/media/ctf.jpg" %}" data-full="{% static "/home/img/media/ctf.jpg" %}" class="m-p-g__thumbs-img" />
+                <img src="{% static "/home/img/media/ctf_1.jpg" %}" data-full="{% static "/home/img/media/ctf_1.jpg" %}" class="m-p-g__thumbs-img" />
+                <img src="{% static "/home/img/media/sigsec.jpg" %}" data-full="{% static "/home/img/media/sigsec.jpg" %}" class="m-p-g__thumbs-img" />
+                <img src="{% static "/home/img/media/sigcomp.jpg" %}" data-full="{% static "/home/img/media/sigcomp.jpg" %}" class="m-p-g__thumbs-img" />
+                <img src="{% static "/home/img/media/intropython.jpg" %}" data-full="{% static "/home/img/media/intropython.jpg" %}" class="m-p-g__thumbs-img" />
+                <img src="{% static "/home/img/media/network_talk.jpg" %}" data-full="{% static "/home/img/media/network_talk.jpg" %}" class="m-p-g__thumbs-img" />
+                <img src="{% static "/home/img/media/sigcomp_1.jpg" %}" data-full="{% static "/home/img/media/sigcomp_1.jpg" %}" class="m-p-g__thumbs-img" />
+                <img src="{% static "/home/img/media/megaminer.jpg" %}" data-full="{% static "/home/img/media/megaminer.jpg" %}"  class="m-p-g__thumbs-img" />
+            </div>
 
+            <div class="m-p-g__fullscreen"></div>
+        </div>
+    </div>
 </div>
+
+<script>
+	var elem = document.querySelector('.m-p-g');
+
+	document.addEventListener('DOMContentLoaded', function() {
+		var gallery = new MaterialPhotoGallery(elem);
+	});
+</script>
+
+
+{#    <a href="{% static "/home/img/media/ctf.jpg" %}" style="background-image: {% static "/home/img/media/ctf.jpg" %}">#}
+{#        <img class="media-picture" src="{% static "/home/img/media/ctf.jpg" %}" />#}
+{#    </a>#}
+{#    <a href="{% static "/home/img/media/ctf_1.jpg" %}" style="background-image: {% static "/home/img/media/ctf_1.jpg" %}">#}
+{#        <img class="media-picture" src="{% static "/home/img/media/ctf_1.jpg" %}" />#}
+{#    </a>#}
+{#    <a href="{% static "/home/img/media/sigsec.jpg" %}" style="background-image: {% static "/home/img/media/sigsec.jpg" %}">#}
+{#        <img class="media-picture" src="{% static "/home/img/media/sigsec.jpg" %}" />#}
+{#    </a>#}
+{#    <a href="{% static "/home/img/media/sigcomp.jpg" %}" style="background-image: {% static "/home/img/media/sigcomp.jpg" %}">#}
+{#        <img class="media-picture" src="{% static "/home/img/media/sigcomp.jpg" %}" />#}
+{#    </a>#}
+{#    <a href="{% static "/home/img/media/intropython.jpg" %}" style="background-image: {% static "/home/img/media/intropython.jpg" %}">#}
+{#        <img class="media-picture" src="{% static "/home/img/media/intropython.jpg" %}" />#}
+{#    </a>#}
+{#    <a href="{% static "/home/img/media/network_talk.jpg" %}" style="background-image: {% static "/home/img/media/network_talk.jpg" %}">#}
+{#        <img class="media-picture" src="{% static "/home/img/media/network_talk.jpg" %}" />#}
+{#    </a>#}
+{#    <a href="{% static "/home/img/media/sigcomp_1.jpg" %}" style="background-image: {% static "/home/img/media/sigcomp_1.jpg" %}">#}
+{#        <img class="media-picture" src="{% static "/home/img/media/sigcomp_1.jpg" %}" />#}
+{#    </a>#}
+{#    <a href="{% static "/home/img/media/megaminer.jpg" %}" style="background-image: {% static "/home/img/media/megaminer.jpg" %}">#}
+{#        <img class="media-picture" src="{% static "/home/img/media/megaminer.jpg" %}" />#}
+{#    </a>#}
+
+    <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/45226/material-photo-gallery.min.js"></script>
+
+
 {% endblock %} 
