[FIX] Fix name of picture to reflect event

--- a/ACM_General/home/templates/home/media.html
+++ b/ACM_General/home/templates/home/media.html
@@ -22,7 +22,7 @@
                 <img src="{% static "/home/img/media/intropython.jpg" %}" data-full="{% static "/home/img/media/intropython.jpg" %}" class="m-p-g__thumbs-img" />
                 <img src="{% static "/home/img/media/network_talk.jpg" %}" data-full="{% static "/home/img/media/network_talk.jpg" %}" class="m-p-g__thumbs-img" />
                 <img src="{% static "/home/img/media/sigcomp_1.jpg" %}" data-full="{% static "/home/img/media/sigcomp_1.jpg" %}" class="m-p-g__thumbs-img" />
-                <img src="{% static "/home/img/media/megaminer.jpg" %}" data-full="{% static "/home/img/media/megaminer.jpg" %}"  class="m-p-g__thumbs-img" />
+                <img src="{% static "/home/img/media/icpc.jpg" %}" data-full="{% static "/home/img/media/megaminer.jpg" %}"  class="m-p-g__thumbs-img" />
             </div>
 
             <div class="m-p-g__fullscreen"></div>
