[FIX] Style fixes

--- a/ACM_General/home/templates/home/media.html
+++ b/ACM_General/home/templates/home/media.html
@@ -22,7 +22,7 @@
                 <img src="{% static "/home/img/media/intropython.jpg" %}" data-full="{% static "/home/img/media/intropython.jpg" %}" class="m-p-g__thumbs-img" />
                 <img src="{% static "/home/img/media/network_talk.jpg" %}" data-full="{% static "/home/img/media/network_talk.jpg" %}" class="m-p-g__thumbs-img" />
                 <img src="{% static "/home/img/media/sigcomp_1.jpg" %}" data-full="{% static "/home/img/media/sigcomp_1.jpg" %}" class="m-p-g__thumbs-img" />
-                <img src="{% static "/home/img/media/icpc.jpg" %}" data-full="{% static "/home/img/media/megaminer.jpg" %}"  class="m-p-g__thumbs-img" />
+                <img src="{% static "/home/img/media/icpc.jpg" %}" data-full="{% static "/home/img/media/icpc.jpg" %}"  class="m-p-g__thumbs-img" />
             </div>
 
             <div class="m-p-g__fullscreen"></div>
@@ -60,8 +60,8 @@
 {#    <a href="{% static "/home/img/media/sigcomp_1.jpg" %}" style="background-image: {% static "/home/img/media/sigcomp_1.jpg" %}">#}
 {#        <img class="media-picture" src="{% static "/home/img/media/sigcomp_1.jpg" %}" />#}
 {#    </a>#}
-{#    <a href="{% static "/home/img/media/megaminer.jpg" %}" style="background-image: {% static "/home/img/media/megaminer.jpg" %}">#}
-{#        <img class="media-picture" src="{% static "/home/img/media/megaminer.jpg" %}" />#}
+{#    <a href="{% static "/home/img/media/icpc.jpg" %}" style="background-image: {% static "/home/img/media/icpc.jpg" %}">#}
+{#        <img class="media-picture" src="{% static "/home/img/media/icpc.jpg" %}" />#}
 {#    </a>#}
 
     <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/45226/material-photo-gallery.min.js"></script>
