--- a/Presentations/1_Intro/css/theme/blackneo.css
+++ b/Presentations/1_Intro/css/theme/blackneo.css
@@ -11,12 +11,12 @@ section.has-light-background, section.has-light-background h1, section.has-light
  * GLOBAL STYLES
  *********************************************/
 body {
-  background: #222;
-  background-color: #222; }
+  background: #21262A;
+  background-color: #21262A; }
 
 .reveal {
   font-family: "Source Sans Pro", Helvetica, sans-serif;
-  font-size: 42px;
+  font-size: 36px;
   font-weight: normal;
   color: #fff; }
 
@@ -45,7 +45,7 @@ body {
 .reveal h5,
 .reveal h6 {
   margin: 0 0 20px 0;
-  color: #fff;
+  color: #f0f0f0;
   font-family: "Source Sans Pro", Helvetica, sans-serif;
   font-weight: 600;
   line-height: 1.2;
@@ -64,7 +64,10 @@ body {
   font-size: 1.3em; }
 
 .reveal h4 {
-  font-size: 1em; }
+  font-size: .8em; }
+
+.reveal h5 {
+  font-size: .6em; }
 
 .reveal h1 {
   text-shadow: none; }
@@ -73,6 +76,7 @@ body {
  * OTHER
  *********************************************/
 .reveal p {
+    color: #B1A5BC;
   margin: 20px 0;
   line-height: 1.3; }
 
