--- a/ACM_General/home/templates/home/upcoming-events.html
+++ b/ACM_General/home/templates/home/upcoming-events.html
@@ -9,11 +9,9 @@
             <div class="flyer-info">
                 <h2>{{ event.title }}</h2>
                 <p>{{ event.description }}</p>
-                <!--
                 {% if event.link %}
-                    <div><a href="http://siggame.io">Learn More</a></div>
+                    <div><a href="{{ event.link }}">Learn More</a></div>
                 {% endif %}
-                -->
             </div>
         </div>
     </div>
