--- a/ACM_General/home/templates/home/index.html
+++ b/ACM_General/home/templates/home/index.html
@@ -11,6 +11,7 @@
 
 {% block body_content %}
 	<div class="main-section">
+		{% include "home/upcoming-events.html" %}
 		<!-- Events go here -->
     </div>
     <div class="sig-section">
