[UPDATE/FIX] Updated tests and model for Event
- FIX: Removed the 'novalidate' HTML attribute from the create event HTML
  page because it was causing everthing to not be validated rather than
  just the link field.
- Added TextInput widget to link field so that the webpage no longer
  recognized it as URL so that it no longer tries to validate the URL.
- Added clean method to the Event model so that it can now validate the
  host and expire date via Django rather than using Javascript. Additionally,
  since this is now validated via the clean method, the JS that was previously
  doing this check has been commented-out for now.
- Added to the HTML create event pages so that it now outputs error messages
  pertaining to each of the fields and non-field errors.
- Added css styling for error messages that now appear on the create event page.
- Added to the view file so that if errors occur, the user is redirected back to
  the event page and displays the info that they had entered along with the
  errors pertaining to what they did wrong.
- Added folder named 'test_data' which currently just holds an image used
  for testing puroses.
- Updated "test_get_path_for_flier_function_along_with_image_field" test function
  to accomodate for the new clean method added to the Event model.
- Added tests to "ViewTestCase" which tests the availability of the create
  event page based off of whether or not a user is a superuser.
- Added 'EventFormTestCase' which tests the Event model under different
  circumstances.

--- a/ACM_General/events/static/events/css/create-event.css
+++ b/ACM_General/events/static/events/css/create-event.css
@@ -51,7 +51,7 @@ input, textarea, option {
 
 .logo-name {
     color: white;
-    font-size: 90%;
+    font-size: 85%;
     align-self: center;
 }
 
@@ -59,6 +59,12 @@ input, textarea, option {
     margin: 25px;
     display: flex;
     flex-direction: column;
+}
+
+.error-message {
+    color: red;
+    font-size: 90%;
+    flex: 6;
 }
 
 .flex-item{
