--- a/ACM_General/core/templates/core/base.html
+++ b/ACM_General/core/templates/core/base.html
@@ -66,11 +66,10 @@
     </head>
 
     <body>
-        <!--[if lt IE 8]>
-                <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-
         {% block body_header %}
+        {% endblock %}
+
+        {% block body_navigation %}
         {% endblock %}
 
         {% block body_content %}
